[patch] accept cp4d namespace as arg

--- a/tekton/src/pipelines/mas-update.yml.j2
+++ b/tekton/src/pipelines/mas-update.yml.j2
@@ -119,6 +119,10 @@ spec:
       type: string
       default: ""
       description: Flag that determines if CP4D must be upgraded
+    - name: cp4d_namespace
+      type: string
+      default: "ibm-cpd"
+      description: Namespace where kafka instances will be updated
     - name: cp4d_update_ws
       type: string
       default: ""
