Add support for JDBC connection URL additional params

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-db2u-database.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-db2u-database.yaml.j2
@@ -106,6 +106,10 @@ mas_annotations:
 {%- endif %}
 jdbc_route: {{JDBC_ROUTE}}
 
+{%- if JDBC_CONNECTION_URL_ADDITIONAL_PARAMS is defined and JDBC_CONNECTION_URL_ADDITIONAL_PARAMS !='' %}
+jdbc_connection_url_additional_params: {{ JDBC_CONNECTION_URL_ADDITIONAL_PARAMS }}
+{%- endif %}
+
 db2_timezone: {{DB2_TIMEZONE}}
 
 {% if STORAGE_CLASS_DEFINITIONS and IS_REPLICA_TASK != 'true' %}
