[patch] Remove standalone_aiservice_install flag

--- a/tekton/src/params/install.yml.j2
+++ b/tekton/src/params/install.yml.j2
@@ -689,13 +689,6 @@
   description: Configure install plan of Optimizer application (full or limited)
   default: full
 
-# MAS Application Configuration - AI Service
-# -----------------------------------------------------------------------------
-- name: standalone_aiservice_install
-  type: string
-  description: Set to 'true' to install IBM Maximo AI Service as a standalone application
-  default: "false"
-
 # MAS Application Configuration - Predict
 # -----------------------------------------------------------------------------
 - name: predict_deployment_size
@@ -746,3 +739,7 @@
   description: ConfigMap with configurations not supported by Tekton
   type: string
   default: ""
+
+#  AI Service Configuration
+# -----------------------------------------------------------------------------
+{{ lookup('template', params_src_dir ~ '/install-aiservice.yml.j2') }}
