--- a/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
@@ -28,6 +28,12 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
+    - name: is_efs
+      type: string
+      default: 'false'
+    - name: is_s3
+      type: string
+      default: 'false'
 
   stepTemplate:
     env:
@@ -53,6 +59,10 @@ spec:
         value: $(params.github_repo)
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
+      - name: IS_EFS
+        value: $(params.is_efs)
+      - name: IS_S3
+        value: $(params.is_s3)
     envFrom:
       - configMapRef:
           name: environment-properties
@@ -79,7 +89,10 @@ spec:
             --github-org $GITHUB_ORG \
             --github-repo $GITHUB_REPO \
             --git-branch $GIT_BRANCH \
-            --region-name $REGION_NAME
+            --region-name $REGION_NAME \
+            --cluster-url $CLUSTER_URL \
+            --is_efs $IS_EFS \
+            --is_s3 $IS_S3
 
           exit $?
       command:
