--- a/tekton/src/tasks/gitops/gitops-iac-create-branch.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-create-branch.yml.j2
@@ -2,7 +2,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: gitops-iac-create-branch
+  name: gitops-iac-config
 spec:
   params:
     - name: cluster_name
