--- a/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
@@ -380,3 +380,7 @@ spec:
           value: $(params.github_repo)
         - name: github_host
           value: $(params.github_host)
+        - name: is_efs
+          value: $(params.is_efs)
+        - name: is_s3
+          value: $(params.is_s3)
