--- a/tekton/src/tasks/gitops/gitops-iac-manage-pr.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-manage-pr.yml.j2
@@ -19,6 +19,12 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
+    - name: is_efs
+      type: string
+      default: 'false'
+    - name: is_s3
+      type: string
+      default: 'false'
 
   stepTemplate:
     env:
@@ -36,6 +42,10 @@ spec:
         value: $(params.github_repo)
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
+      - name: IS_EFS
+        value: $(params.is_efs)
+      - name: IS_S3
+        value: $(params.is_s3)
     envFrom:
       - configMapRef:
           name: environment-properties
@@ -60,7 +70,9 @@ spec:
             --github-host $GITHUB_HOST \
             --github-org $GITHUB_ORG \
             --github-repo $GITHUB_REPO \
-            --git-branch $GIT_BRANCH
+            --git-branch $GIT_BRANCH \
+            --is_efs $IS_EFS \
+            --is_s3 $IS_S3
 
           exit $?
       command:
