--- a/tekton/src/tasks/gitops/gitops-iac-provision-s3.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-s3.yml.j2
@@ -85,7 +85,7 @@ spec:
           git config --global user.email "you@example.com"
           git config --global user.password $GITHUB_PAT
 
-          CMD="mas gitops-iac-provision-s3 -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --secrets-path $SECRET_PATH --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
+          CMD="mas gitops-iac-provision-s3 -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
 
           [ -n "$S3_SOURCE" ] && CMD="$CMD --s3_source $S3_SOURCE"
           [ -n "$S3_SOURCE_IAMPOLICY" ] && CMD="$CMD --s3_source_iampolicy $S3_SOURCE_IAMPOLICY"
