--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -139,6 +139,18 @@ spec:
     - name: additional_vpn
       type: string
       default: ""
+    - name: additional_infrastructure
+      type: string
+      default: ""
+    - name: instance_name
+      type: string
+      default: ""
+    - name: instance_reason_code
+      type: string
+      default: ""
+    - name: instance_cost
+      type: string
+      default: ""
     - name: extensions
       type: string
       default: "false"
@@ -252,6 +264,14 @@ spec:
         value: $(params.enhanced_dr)
       - name: ADDITIONAL_VPN
         value: $(params.additional_vpn)
+      - name: ADDITIONAL_INFRASTRUCTURE
+        value: $(params.additional_infrastructure)
+      - name: INSTANCE_NAME
+        value: $(params.instance_name)
+      - name: INSTANCE_REASON_CODE
+        value: $(params.instance_reason_code)
+      - name: INSTANCE_COST
+        value: $(params.instance_cost)
       - name: IS_NON_SHARED_CLUSTER
         value: $(params.is_non_shared_cluster)
       - name: EXTENSIONS
