--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
@@ -37,27 +37,14 @@ location = {
     region             = "{{REGION_NAME}}"
     availability_zones = ["{{REGION_NAME}}a", "{{REGION_NAME}}b", "{{REGION_NAME}}c"]
 }
-{%- if S3_MANAGE | lower == 'true'  %}
-#----S3 Manage related params starts----
-s3bucket_name_prefix_manage    = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}"
-iam_user_name_prefix_manage = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}-sid"
-iam_user_arn_prefix_manage  = "arn:aws:iam::{{ACCOUNT_ID}}:user/massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}-sid"
-s3_iam_users_list_manage = {
-    doclinks = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-doclinks-rw"
-    },
-    custfiles = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-custfiles-rw"
-    },
-    logs_rw = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-log-rw"
-    },
-    logs_ro = {
-        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-log-ro"
-    }
-}
-#----S3 Manage related params ends----
+{%- import 's3-macros.j2' as s3 -%}
+{%- for component_name, component_config in S3_COMPONENTS.items() %}
+{%- if component_config.enabled | lower == 'true' %}
+
+{{ s3.generate_component_tfvars(component_name, component_config, ACCOUNT_ID, CLUSTER_ID, MAS_INSTANCE_ID) }}
+
 {%- endif %}
+{%- endfor %}
 
 #----S3 related params ends----
 {%- endif %}
