--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
@@ -46,13 +46,6 @@ variable "create_efs_policy" {
     description = "Whether to create efs policy or not"
 }
 
-variable "s3_iam_users_list_manage" {
-    description = "s3 user list"
-        type = map(object({
-        iam_user_name = string
-    }))
-}
-
 variable "access_level_rw" {
     type        = string
     description = "read and write"
@@ -61,7 +54,7 @@ variable "access_level_rw" {
 
 variable "access_level_ro" {
     type        = string
-    description = "read and write"
+    description = "read only"
     default     = "ro"
 }
 
@@ -92,18 +85,14 @@ variable "s3_encryption_algorithm" {
     description = "s3 encryption algorithm"
 }
 
-{%- if S3_MANAGE | lower == 'true'%}
-variable "s3bucket_name_prefix_manage" {
-    type        = string
-    description = "s3 bucket name prefix"
-}
-variable "iam_user_name_prefix_manage" {
-    type        = string
-    description = "iam user name prefix"
-}
-variable "iam_user_arn_prefix_manage" {
-    type        = string
-    description = "iam user arn"
-}
+{%- if IS_S3 | lower == 'true' %}
+{%- import 's3-macros.j2' as s3 -%}
+{%- for component_name, component_config in S3_COMPONENTS.items() %}
+{%- if component_config.enabled | lower == 'true' %}
+
+{{ s3.generate_component_variables(component_name) }}
+
+{%- endif %}
+{%- endfor %}
 {%- endif %}
 {%- endif %}
