--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -1,4 +1,5 @@
 {%- import 's3-macros.j2' as s3 -%}
+{%- import 'efs-macros.j2' as efs -%}
 {%- if IS_EFS | lower == 'true' -%}
 data "aws_subnets" "external_subnets" {
   filter {
@@ -78,52 +79,7 @@ locals {
 
  {%- if IS_EFS | lower == 'true' %}
   #----EFS config related params starts----
-  multiple-efs = {
-{%- if EFS_MANAGE == "true" %}
-    manage-db2 = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-db2"])
-      performance_mode = "{{EFS_MANAGE_DB2_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_MANAGE_DB2_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_MANAGE_DB2_MOUNT_COUNT}}
-    }
-    manage-main = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-main"])
-      performance_mode = "{{EFS_MANAGE_MAIN_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_MANAGE_MAIN_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_MANAGE_MAIN_MOUNT_COUNT}}
-    }
-{%- endif %}
-{%- if EFS_IOT == "true" %}
-    iot-db2 = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "iot-db2"])
-      performance_mode = "{{EFS_IOT_DB2_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_IOT_DB2_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_IOT_DB2_MOUNT_COUNT}}
-    }
-{%- endif %}
-{%- if EFS_VISUALINSPECTION == "true" %}
-    visualinspection-main = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "visualinspection-main"])
-      performance_mode = "{{EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT}}
-    }
-{%- endif %}
-{%- if EFS_FACILITIES == "true" %}
-    facilities-db2 = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-db2"])
-      performance_mode = "{{EFS_FACILITIES_DB2_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_FACILITIES_DB2_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_FACILITIES_DB2_MOUNT_COUNT}}
-    }
-    facilities-main = {
-      name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-main"])
-      performance_mode = "{{EFS_FACILITIES_MAIN_PERFORMANCE_MODE}}"
-      throughput_mode = "{{EFS_FACILITIES_MAIN_THROUGHPUT_MODE}}"
-      efs_mount_count = {{EFS_FACILITIES_MAIN_MOUNT_COUNT}}
-    }
-{%- endif %}
-  }
+  {{ efs.generate_all_efs_volumes(EFS_COMPONENTS) }}
   #----EFS config related params ends----
 {%- endif %}
 }
