--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3instance.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3instance.yaml.j2
@@ -1,15 +1,15 @@
-module "s3buckets_instance" {
+module "s3buckets_instance_{{ COMPONENT_NAME }}" {
   source = "{{ S3_SOURCE }}"
 
-  depends_on = [module.account_policy]
+  depends_on = [module.account_policy_{{ COMPONENT_NAME }}]
 
   tags                    = var.common_tags
   name_prefix             = var.name_prefix
-  s3buckets               = local.cluster.instance.{{APP_NAME}}_s3buckets
-  iam_user_arns           = local.iam_user_arns_{{APP_NAME}}
-  bucket_user_name_map    = local.bucket_user_name_map_{{APP_NAME}}
-  iam_users_by_bucket     = local.iam_users_by_bucket_{{APP_NAME}}
-  s3_iam_users_list       = local.s3_iam_users_list_{{APP_NAME}}
+  s3buckets               = local.cluster.instance.{{ COMPONENT_NAME }}_s3buckets
+  iam_user_arns           = local.iam_user_arns_{{ COMPONENT_NAME }}
+  bucket_user_name_map    = local.bucket_user_name_map_{{ COMPONENT_NAME }}
+  iam_users_by_bucket     = local.iam_users_by_bucket_{{ COMPONENT_NAME }}
+  s3_iam_users_list       = local.s3_iam_users_list_{{ COMPONENT_NAME }}
   s3_actions              = local.s3_actions
   s3_encryption           = true
   s3_encryption_algorithm = var.s3_encryption_algorithm
