--- a/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
@@ -266,9 +266,12 @@ spec:
     # -------------------------------------------------------------------------
     - name: gitops-iac-generate-common-files
       when:
-        - input: "$(params.is_efs)-$(params.is_s3)"
+        - input: "$(params.is_efs)"
           operator: in
-          values: ["true-true", "true-false", "false-true"]
+          values: ["true"]
+        - input: "$(params.is_s3)"
+          operator: in
+          values: ["true"]
       runAfter:
         - gitops-iac-provision-efs
         - gitops-iac-provision-s3
